# GraphicsProgrammingWithCpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe.md  makeProjAndSln.bat  premake5.lua  vk_layer_settings.txt
GLTFs/Sponza/: NewSponza_Main_USD_003.max  NewSponza_Main_USD_Yup_003.usda  NewSponza_Main_USD_Zup_003.usda
Images/: Note.txt
OOPWithCpp/: GraphicsProgrammingWithCpp.cmake
OOPWithCpp/src/Application/: Application.cpp  Application.hpp
OOPWithCpp/src/CPURayTracer/: CPURayTracer.cpp  CPURayTracer.hpp  CPURayTracerRenderer.cpp  CPURayTracerRenderer.hpp  Scene.cpp  Scene.hpp
OOPWithCpp/src/CPURayTracer/AABB/: AABB.cpp  AABB.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Camara/: Camera.cpp  Camera.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Hitables/: BaseHittable.cpp  BaseHittable.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Hitables/Hittables/: Hittables.cpp  Hittables.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Hitables/Sphere/: Sphere.cpp  Sphere.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Hitables/SplitBVH/: SplitBVH.cpp  SplitBVH.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Interval/: Interval.cpp  Interval.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Material/: BaseMaterial.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Material/DefusedLight/: DefusedLight.cpp  DefusedLight.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Material/Dielectric/: Dielectric.cpp  Dielectric.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Ray/: Ray.cpp  Ray.hpp
OOPWithCpp/src/CPURayTracer/RayTracer/Texture/: BaseTexture.hpp
OOPWithCpp/src/CPURayTracer/Scenes/: Scene.cpp  Scene.hpp
OOPWithCpp/src/CPURayTracer/Scenes/BasicScene/: BasicScene.cpp  BasicScene.hpp
OOPWithCpp/src/CPURayTracer/Scenes/Book1FinalRender/: Book1FinalRender.cpp  Book1FinalRender.hpp
OOPWithCpp/src/CPURayTracer/Scenes/DielectricTest/: DielectricTest.cpp  DielectricTest.hpp
OOPWithCpp/src/CPURayTracer/Scenes/DuelWhiteSpheres/: DuelWhiteSpheres.cpp  DuelWhiteSpheres.hpp
OOPWithCpp/src/CPURayTracer/Scenes/EarthImage/: EarthScene.cpp  EarthScene.hpp
OOPWithCpp/src/CPURayTracer/Scenes/MetalTest/: MetalTest.cpp  MetalTest.hpp
OOPWithCpp/src/CPURayTracer/Scenes/RandTest/: RandTestScene.cpp  RandTestScene.hpp
OOPWithCpp/src/Core/: Core.hpp  EntryPoint.cpp  OWCRand.hpp  TinyGLTFImpl.cpp  core.hpp
OOPWithCpp/src/Core/Layers/: Layer.hpp  LayerStack.cpp  LayerStack.hpp
OOPWithCpp/src/Core/LoadFile/: LoadFile.hpp  LoadFile.inl
OOPWithCpp/src/Core/Logging/: Log.inl  log.hpp  log.inl
OOPWithCpp/src/Events/: BaseEvent.hpp
OOPWithCpp/src/Events/KeyboardEvents/: KeyEvent.hpp
OOPWithCpp/src/Events/Window Events/: WindowCloseEvent.hpp  WindowResize.hpp
OOPWithCpp/src/Events/WindowEvents/: WindowResize.hpp
OOPWithCpp/src/GPURayTracer/: GPURayTracerRenderer.cpp  GPURayTracerRenderer.hpp
OOPWithCpp/src/GPURayTracer/Mesh/: SceneMesh.cpp  SceneMesh.hpp
OOPWithCpp/src/GPURayTracer/Mesh/VulkanSceneMesh/: VulkanSceneMesh.cpp  VulkanSceneMesh.hpp
OOPWithCpp/src/GPURayTracer/Scene/: BaseGPUScene.cpp  BaseGPUScene.hpp
OOPWithCpp/src/GPURayTracer/Scene/SponzaPalace/: SponzaPalace.cpp  SponzaPalace.hpp
OOPWithCpp/src/GPURayTracer/TLAS/: BaseTLAS.cpp  BaseTLAS.hpp
OOPWithCpp/src/GPURayTracer/TLAS/VulkanTLAS/: VulkanTLAS.cpp  VulkanTLAS.hpp
OOPWithCpp/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
OOPWithCpp/src/ImageLoader/: ImageLoader.cpp  ImageLoader.hpp  ImageLoader.inl
OOPWithCpp/src/MainLayer/: InterLayerData.hpp  MainLayer.cpp  MainLayer.hpp
OOPWithCpp/src/RenderLayer/: RenderLayer.cpp  RenderLayer.hpp
OOPWithCpp/src/Renderer/: Renderer.cpp  Renderer.hpp
OOPWithCpp/src/Renderer/GraphicsContext/: GraphicsContext.cpp  GraphicsContext.hpp
OOPWithCpp/src/Renderer/GraphicsContext/Vulkan/: VMA_Impl.cpp  VulkanContext.cpp  VulkanContext.hpp  VulkanCore.cpp  VulkanCore.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp
OOPWithCpp/src/Shaders/: BaseShader.cpp  BaseShader.hpp
OOPWithCpp/src/Shaders/Vulkan/: VulkanShader.cpp  VulkanShader.hpp
OOPWithCpp/src/Test/: TestLayer.cpp  TestLayer.hpp
OOPWithCpp/src/UniformBuffer/: UniformBuffer.cpp  UniformBuffer.hpp
OOPWithCpp/src/UniformBuffer/VulkanUniformBuffer/: VulkanUniformBuffer.cpp  VulkanUniformBuffer.hpp
OOPWithCpp/src/Window/: Window.cpp  Window.hpp  WindowEvent.cpp  WindowEvent.hpp
ShaderSrc/: Image.frag.glsl  Image.frag.spv  Image.vert.glsl  Test.slang  test.frag.spv  test.vert.spv
ShaderSrc/CPURayTracerShaders/: Image.spv
ShaderSrc/GPURayTracerShaders/: DisplayImage.slang  DisplayImage.spv  RayTracing.slang  RayTracing.spv  gltfData.h.slang  test.rchit.glsl  test.rchit.spv  test.rgen.glsl  test.rgen.spv  test.rmiss.glsl  test.rmiss.spv  test.slang  test.spv
Slang/lib/: gfx.lib  libgfx.so.0.2026.4.2  slang-compiler.lib  slang-rt.lib  slang.lib
Slang/lib/cmake/slang/: slangConfigVersion.cmake  slangTargets-release.cmake  slangTargets.cmake
Slang/lib/slang-standard-module-2026.4.2/slang/: neural.slang-module
StartProj/: StartProj.cmake
StartProj/src/: main.cpp
(+6 files in other folders)
